// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Should render an empty header 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 hCuBIL"
>
  <div
    className="StyledBox-sc-13pk1d4-0 cJCWCR"
  >
    <a
      href="/"
      label="Centrifuge"
      onClick={[Function]}
      size="large"
    >
      <img
        className="StyledImage-ey4zx9-0 fmkmCl"
        src="logo.png"
      />
    </a>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 ffeAql"
    />
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 BclQN"
    />
  </div>
</div>
`;

exports[`Header Should render the Header 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 hCuBIL"
>
  <div
    className="StyledBox-sc-13pk1d4-0 cJCWCR"
  >
    <a
      href="/"
      label="Centrifuge"
      onClick={[Function]}
      size="large"
    >
      <img
        className="StyledImage-ey4zx9-0 fmkmCl"
        src="logo.png"
      />
    </a>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 ffeAql"
    >
      <button
        className="StyledButton-sc-323bzc-0 jfbKsv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        Invoices
      </button>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iChEkS"
      />
      <button
        className="StyledButton-sc-323bzc-0 jfbKsv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        Contacts
      </button>
    </div>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 BclQN"
    >
      <span
        className="StyledText-sc-1sadyjn-0 fWSbXS"
      >
        My Centrifuge ID: 
        0x33333
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iChEkS"
      />
      <span
        className="StyledText-sc-1sadyjn-0 fWSbXS"
      >
         
      </span>
    </div>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 BclQN"
    >
      <a
        className="StyledAnchor-sc-1rp7lwl-0 jgeOSx"
        href="/api/users/logout"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        Logout
      </a>
    </div>
  </div>
</div>
`;
